<resources>
    <string name="EditLinesHeader">Row Editing</string>
    <string name="FAQ">FAQ</string>
    <string name="Settings">Settings</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="advanced_plan">Advanced Plan</string>
    <string name="align_text_to_lines">Align Text to lines</string>
    <string name="align_the_blue_lines_to_the_text">Align the blue lines to the text</string>
    <string name="already_premium_message">Already premium user</string>
    <string name="app_name">Pen to Print</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="area_selection">Area Selection</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_out_this_app_im_using_pen_to_print__converting_handwritten_notes_to_text_try_it_now_for_free">"Check out this app I'm using: Learnivo- converting handwritten notes to text! Try it now for free"</string>
    <string name="com.crashlytics.android.build_id">678e15fc-ac4f-4207-9720-508dbc6ef150</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">"You're in control - choose what info you want to share with apps."</string>
    <string name="com_mixpanel_android_close">Close</string>
    <string name="com_mixpanel_android_done">Done</string>
    <string name="com_mixpanel_android_exit">Exit</string>
    <string name="com_mixpanel_android_logo">By Mixpanel</string>
    <string name="com_mixpanel_android_notification_image">Image not displayed</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="contact_us">Contact us</string>
    <string name="courtesy_plan_description">Export 3 texts for free</string>
    <string name="courtesy_plan_title">Free Trial</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="crop_image_activity_title" />
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="daily_plan">Daily Plan</string>
    <string name="default_web_client_id">384670635981-osnf67sjs70tqi18lsee10i8k4aansjl.apps.googleusercontent.com</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="export_texts_for_unlimited_time">Export unlimited texts</string>
    <string name="export_unlimited_texts_for_24_hours">Export unlimited texts for 24 hours</string>
    <string name="export_unlimited_texts_for_a_month">Export unlimited texts for a month</string>
    <string name="export_unlimited_texts_for_a_year">Export unlimited texts for a year</string>
    <string name="export_x_texts">Export %d texts</string>
    <string name="facebook_app_id">370041806852848</string>
    <string name="firebase_database_url">https://handwrite-recognizer.firebaseio.com</string>
    <string name="free_export">Free export</string>
    <string name="from_camera">From Camera</string>
    <string name="from_files">From Files</string>
    <string name="from_photos">From Photos</string>
    <string name="gcm_defaultSenderId">384670635981</string>
    <string name="get_3_free_exports_for_every_friend_that_installs_the_app">Get 3 free exports for every friend that installs the app</string>
    <string name="get_it_now_button">Get it now!</string>
    <string name="google_api_key">AIzaSyBMAN8T4ckHpHue-Yyb8qX1_D3WjG-doBY</string>
    <string name="google_app_id">1:384670635981:android:9de03a0843c5562a</string>
    <string name="google_crash_reporting_api_key">AIzaSyBMAN8T4ckHpHue-Yyb8qX1_D3WjG-doBY</string>
    <string name="google_storage_bucket">handwrite-recognizer.appspot.com</string>
    <string name="got_it">Got it!</string>
    <string name="invite">Invite</string>
    <string name="invite_friends">Invite friends</string>
    <string name="lifetime_plan">Lifetime Plan</string>
    <string name="loremIpsur">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris auctor molestie arcu nec vulputate. Nam augue augue, tincidunt eu volutpat quis, consectetur in nulla. ut. Morbi sit amet velit vel tellus fermentum tincidunt. Nulla at volutpat dui.</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="monthly_plan">Monthly Plan</string>
    <string name="my_saved_texts">My saved texts</string>
    <string name="my_text">My text</string>
    <string name="no_not_really">No, not really</string>
    <string name="no_thanks">No, thanks</string>
    <string name="ok_sure">OK, sure</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="settings_rate_the_app">Rate the app</string>
    <string name="share_the_app">Invite friends</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="upgrade_to_premium">premium</string>
</resources>